Fixed compile-time bugs